--- a/BetweenBrowserAndController01/src/main/resources/templates/onlyOneCheckbox.html
+++ b/BetweenBrowserAndController01/src/main/resources/templates/onlyOneCheckbox.html
@@ -4,14 +4,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>チェックボックスとボタンが１つづつの画面</title>
+<link th:href="@{/css/style.css}" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<form method="post" action="/onlyOneCheckbox" th:object="${checkBoxForm}">
 		<div>チェックボックス１</div>
-		<input type="checkbox" th:field="*{checkbox1}" value="1">
+		<input type="checkbox" th:field="*{checkbox1}" value="1" title="選択肢">
 		選択肢１
+		<div th:if="${#fields.hasErrors('checkbox1')}" th:errors="*{checkbox1}" th:errorclass="red"></div>
 		<hr>
 		<input type="submit" value="送信">
+		<!-- エラーを表示する -->
+		<ul th:if="${#fields.hasErrors('*')}">
+			<li th:each="err:${#fields.errors('*')}" th:text="${err}"></li>
+		</ul>
 	</form>
 </body>
 </html>
