--- a/BetweenBrowserAndController01/src/main/resources/templates/onlyOneCheckbox.html
+++ b/BetweenBrowserAndController01/src/main/resources/templates/onlyOneCheckbox.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<title>チェックボックスとボタンが１つづつの画面</title>
+<title>チェックボックスとボタンが１つづつ</title>
 <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css">
 </head>
 <body>
