--- a/Game/src/main/resources/templates/gameScreen.html
+++ b/Game/src/main/resources/templates/gameScreen.html
@@ -3,6 +3,22 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<style type="text/css">
+table {
+	border-collapse: collapse;
+	border: 1px solid black;
+}
+
+td {
+	border: 1px solid black;
+}
+
+th {
+	border: 1px solid black;
+	background-color: gray;
+	color: white;
+}
+</style>
 <title>数当てゲーム</title>
 </head>
 <body>
@@ -20,5 +36,19 @@
 			<li th:each="err:${#fields.errors('*')}" th:text="${err}"></li>
 		</ul>
 	</form>
+	<th:block th:if="${listResult}!=null">
+		<table>
+			<tr>
+				<th>No.</th>
+				<th>回答</th>
+				<th>結果</th>
+			</tr>
+			<tr th:each="result:${listResult}">
+				<td>[[${result.seqNum}]]</td>
+				<td>[[${result.answerNumber}]]</td>
+				<td>[[${result.result}]]</td>
+			</tr>
+		</table>
+	</th:block>
 </body>
 </html>
