--- a/TryPagination/src/main/resources/templates/pagnationList.html
+++ b/TryPagination/src/main/resources/templates/pagnationList.html
@@ -3,35 +3,75 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<style type="text/css">
-table {
-	border-collapse: collapse;
-	border: 1px solid black;
-}
-
-td {
-	border: 1px solid black;
-}
-
-th {
-	border: 1px solid black;
-	background-color: gray;
-	color: white;
-}
-</style>
+<link th:href="@{/css/style.css}" rel="stylesheet" type="text/css">
 <title>Thymeleaf Sample</title>
 </head>
 <body>
 	<h3>ページネーションを利用した一覧表</h3>
-    <table>
-        <tr>
-            <th>ID</th>
-            <th>Title</th>
-        </tr>
-        <tr th:each="book:${listBook}">
-            <td th:text="${book.id}"></td>
-            <td th:text="${book.title}"></td>
-        </tr>
-    </table>
+	<table>
+		<tr>
+			<th>ID</th>
+			<th>Title</th>
+		</tr>
+		<tr th:each="book:${listBook}">
+			<td th:text="${book.id}">ダミー</td>
+			<td th:text="${book.title}">ダミー</td>
+		</tr>
+	</table>
 </body>
+<!-- 次の id="nav" のブロックは、［演習課題③ ページリンクの範囲を制限する］の対応前の実装コードである。-->
+<ul id="nav">
+	<li>
+		<span th:if="${pageBook.isFirst()}">←前</span>
+		<a th:unless="${pageBook.isFirst()}" th:href="@{/pagnationList(page = ${pageBook.getNumber() - 1})}">←前</a>
+	</li>
+	<li th:each="i : ${#numbers.sequence(0, pageBook.getTotalPages() - 1)}">
+		<span th:if="${i == pageBook.getNumber()}" th:text="${i + 1}"></span>
+		<a th:unless="${i == pageBook.getNumber()}" th:href="@{/pagnationList(page = ${i})}" th:text="${i + 1}"></a>
+	</li>
+	<li>
+		<span th:if="${pageBook.isLast()}">次→</span>
+		<a th:unless="${pageBook.isLast()}" th:href="@{/pagnationList(page = ${pageBook.getNumber()+ 1})}">次→</a>
+	</li>
+</ul>
+<!-- 次の id="nav" のブロックは、［演習課題③ ページリンクの範囲を制限する］の私の考案した実装コードである。-->
+<ul id="nav">
+	<li>
+		<span th:if="${pageBook.isFirst()}">←前</span>
+		<a th:unless="${pageBook.isFirst()}" th:href="@{/pagnationList(page = ${pageBook.getNumber() - 1})}">←前</a>
+	</li>
+	<li th:each="i : ${#numbers.sequence(pageBook.getNumber() - 2, pageBook.getNumber() - 1)}">
+		<a th:if="${0 <= i}" th:href="@{/pagnationList(page = ${i})}" th:text="${i + 1}"></a>
+	</li>
+	<li>
+		<span th:text="'現在ページ：' + ${pageBook.getNumber() + 1}"></span>
+	</li>
+	<li th:if="${(pageBook.getNumber() + 1) < pageBook.getTotalPages()}">
+		<a th:href="@{/pagnationList(page = ${pageBook.getNumber() + 1})}" th:text="${pageBook.getNumber() + 2}"></a>
+	</li>
+	<li th:if="${(pageBook.getNumber() + 2) < pageBook.getTotalPages()}">
+		<a th:href="@{/pagnationList(page = ${pageBook.getNumber() + 2})}" th:text="${pageBook.getNumber() + 3}"></a>
+	</li>
+	<li>
+		<span th:if="${pageBook.isLast()}">次→</span>
+		<a th:unless="${pageBook.isLast()}" th:href="@{/pagnationList(page = ${pageBook.getNumber()+ 1})}">次→</a>
+	</li>
+</ul>
+<!-- 次の id="nav" のブロックは、［演習課題③ ページリンクの範囲を制限する］の書籍の回答例の実装コードである。-->
+<ul id="nav">
+	<li>
+		<span th:if="${pageBook.isFirst()}">←前</span>
+		<a th:unless="${pageBook.isFirst()}" th:href="@{/pagnationList(page = ${pageBook.getNumber() - 1})}">←前</a>
+	</li>
+	<li
+		th:each="i : ${#numbers.sequence(pageBook.getNumber()-2 < 0 ? 0 : pageBook.getNumber()-2, pageBook.getNumber()+2 > pageBook.getTotalPages()-1 ? pageBook.getTotalPages()-1 : pageBook.getNumber()+2)}"
+	>
+		<span th:if="${i == pageBook.getNumber()}" th:text="${i + 1}"></span>
+		<a th:unless="${i == pageBook.getNumber()}" th:href="@{/pagnationList(page = ${i})}" th:text="${i + 1}"></a>
+	</li>
+	<li>
+		<span th:if="${pageBook.isLast()}">次→</span>
+		<a th:unless="${pageBook.isLast()}" th:href="@{/pagnationList(page = ${pageBook.getNumber()+ 1})}">次→</a>
+	</li>
+</ul>
 </html>
