--- a/TryPaginationMyBatis/src/main/resources/templates/listPerson.html
+++ b/TryPaginationMyBatis/src/main/resources/templates/listPerson.html
@@ -3,12 +3,11 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<link th:href="@{/css/style.css}" rel="stylesheet" type="text/css">
 <title>listPerson.html</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-	<div class="container-fluid">
+	<div>
 		<h4>MyBatis APP</h4>
 		<table class="table">
 			<thead>
@@ -24,6 +23,22 @@
 				</tr>
 			</tbody>
 		</table>
+	</div>
+	<div>
+		<ul id="nav">
+			<li>
+				<span th:if="${persons.isFirst()}">←前</span>
+				<a th:unless="${persons.isFirst()}" th:href="@{/list(page = ${persons.getNumber() - 1})}">←前</a>
+			</li>
+			<li th:each="i : ${#numbers.sequence(0, persons.getTotalPages() - 1)}">
+				<span th:if="${i == persons.getNumber()}" th:text="${i + 1}"></span>
+				<a th:unless="${i == persons.getNumber()}" th:href="@{/list(page = ${i})}" th:text="${i + 1}"></a>
+			</li>
+			<li>
+				<span th:if="${persons.isLast()}">次→</span>
+				<a th:unless="${persons.isLast()}" th:href="@{/list(page = ${persons.getNumber()+ 1})}">次→</a>
+			</li>
+		</ul>
 	</div>
 </body>
 </html>
